Excercises - Developer II/src/objects/Book__c.object
<CustomObject>
    <description>Test clonevizart</description>
    <fields>
        <fullName>En_Name__c</fullName>
        <label>En Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Main Book</relationshipLabel>
        <relationshipName>Main_Book</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Main_Book__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>En_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>